test-service-user2.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: depnoyed-test-user2
spec:
  type: ClusterIP
  selector:
    app: test-app
  ports:
    - port: 5678
      targetPort: 5678
