test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app
  namespace: depnoyed-test-user1
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: test-app.apps.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-app
                port:
                  number: 5678
